apps/mail/roundcube/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: roundcube
  namespace: mail

spec:
  replicas: 1

  selector:
    matchLabels:
      app: roundcube

  template:
    metadata:
      labels:
        app: roundcube

    spec:
      containers:
        - name: roundcube

          image: roundcube/roundcubemail:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"

            limits:
              memory: "512Mi"
              cpu: "500m"
