apps/mail/roundcube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roundcube
  namespace: mail
spec:
  selector:
    app: roundcube
  ports:
    - port: 80
      targetPort: 80
