apps/mail/roundcube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: roundcube
  namespace: mail
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"

spec:
  ingressClassName: nginx

  rules:
    - host: mail.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: roundcube
                port:
                  number: 80
